--- a/app/src/main/res/layout/flow_item.xml
+++ b/app/src/main/res/layout/flow_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:paddingBottom="5dp"
-    android:textColor="#676769"
+    android:textColor="@color/color_label"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingTop="5dp"
