--- a/app/src/main/res/layout/include_customer_ticket.xml
+++ b/app/src/main/res/layout/include_customer_ticket.xml
@@ -13,7 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        >
 
         <TextView
             android:layout_width="wrap_content"
