--- a/app/src/main/res/layout/include_customer_ticket.xml
+++ b/app/src/main/res/layout/include_customer_ticket.xml
@@ -26,6 +26,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_add_ticket"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -40,14 +41,15 @@
     <LinearLayout
         android:layout_marginTop="10dp"
         android:background="@drawable/bg_ticket_border"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <ImageView
             android:scaleType="centerCrop"
+            android:id="@+id/iv_spend_history"
             android:src="@drawable/empty_slide"
-            android:layout_width="200dp"
-            android:layout_height="100dp" />
+            android:layout_width="300dp"
+            android:layout_height="150dp" />
     </LinearLayout>
 
 </LinearLayout>
