--- a/app/src/main/res/layout/layout_head_title.xml
+++ b/app/src/main/res/layout/layout_head_title.xml
@@ -56,9 +56,10 @@
         <ImageView
             android:id="@+id/iv_right"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:gravity="center_vertical"
+            android:layout_marginRight="15dp"
             android:layout_centerVertical="true"
             android:padding="10dp"
             android:visibility="gone" />
