--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -14,17 +14,6 @@
         android:background="@color/colorPrimaryDark"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/item_contact_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            android:gravity="center"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="删除"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
     </LinearLayout>
 
     <RelativeLayout
@@ -36,28 +25,40 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <CheckBox
-            android:layout_marginRight="10dp"
+            android:background="@drawable/cb_contact_disable"
+            android:button="@null"
+            android:layout_marginRight="20dp"
             android:layout_centerVertical="true"
             android:id="@+id/cb_select"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <TextView
-            android:layout_centerVertical="true"
+        <RelativeLayout
+            android:id="@+id/rl_header"
             android:layout_toRightOf="@id/cb_select"
-            android:id="@+id/tv_label"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:gravity="center"
-            android:background="@drawable/oval_label"
-            android:text="何"
+            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/iv_header"
+                android:layout_width="42dp"
+                android:layout_height="42dp" />
+            <TextView
+                android:id="@+id/tv_label"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:background="@drawable/oval_label"
+                android:text="何"
+                android:layout_width="42dp"
+                android:layout_height="42dp" />
+        </RelativeLayout>
+
         <LinearLayout
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@id/tv_add"
             android:gravity="center_vertical"
-            android:layout_toRightOf="@id/tv_label"
+            android:layout_toRightOf="@id/rl_header"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="50dp">
@@ -65,7 +66,7 @@
                 android:id="@+id/item_contact_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
                 android:gravity="left|center_vertical"
                 android:text="何竹冬"
                 android:textColor="@android:color/black"
@@ -74,7 +75,7 @@
                 android:id="@+id/tv_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
                 android:gravity="left|center_vertical"
                 android:text="标题"
                 android:textColor="@android:color/black"
@@ -86,7 +87,8 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="15dp"
             android:layout_alignParentRight="true"
-            android:textSize="18sp"
+            android:textSize="15sp"
+            android:textColor="#922c3e"
             android:gravity="center"
             android:layout_gravity="right|center_vertical"
             android:padding="5dp"
@@ -94,6 +96,22 @@
             android:background="@drawable/edit_text_bg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/item_contact_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:clickable="true"
+            android:gravity="center"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="删除"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
     </RelativeLayout>
 
 </com.savor.resturant.widget.contact.SwipeItemLayout>
