--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -34,6 +34,7 @@
                     android:orientation="vertical">
 
                     <EditText
+                        android:maxLength="8"
                         android:textSize="14sp"
                         android:id="@+id/et_name"
                         android:layout_width="match_parent"
@@ -55,6 +56,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <EditText
+                            android:maxLength="11"
                             android:inputType="number"
                             android:textSize="14sp"
                             android:id="@+id/et_phone"
@@ -85,6 +87,7 @@
                             android:layout_marginBottom="10dp"
                             android:background="@color/divider_list" />
                         <EditText
+                            android:maxLength="11"
                             android:id="@+id/et_second_mobile"
                             android:textSize="14sp"
                             android:layout_width="match_parent"
