--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -117,5 +117,6 @@
     <color name="color_text_black">#434343</color>
     <color name="grid_item_divider">#EAEAEA</color>
     <color name="color_label">#666666</color>
+    <color name="app_gray">#999999</color>
 
 </resources>
