--- a/common-library/src/main/res/drawable/edit_text_bg.xml
+++ b/common-library/src/main/res/drawable/edit_text_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <stroke android:width="1dp" android:color="#e0e0e0" />
+    <stroke android:width="1dp" android:color="#922c3e" />
     <solid android:color="@color/white"/>
 	<corners android:radius="2dp"/>
 </shape>
