--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -118,5 +118,6 @@
     <color name="grid_item_divider">#EAEAEA</color>
     <color name="color_label">#666666</color>
     <color name="app_gray">#999999</color>
+    <color name="color_222222">#222222</color>
 
 </resources>
