--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -119,5 +119,6 @@
     <color name="color_label">#666666</color>
     <color name="app_gray">#999999</color>
     <color name="color_222222">#222222</color>
+    <color name="color_f6f2ed">#f6f2ed</color>
 
 </resources>
