--- a/app/src/main/res/layout/dialog_import_contacts.xml
+++ b/app/src/main/res/layout/dialog_import_contacts.xml
@@ -3,52 +3,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <LinearLayout
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_gravity="center_horizontal"
-            android:padding="10dp"
-            android:text="首次使用引导"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <View
-            android:layout_width="match_parent"
-            android:background="@color/app_divider"
-            android:layout_height="1dp"/>
-    </LinearLayout>
+
     <ImageView
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="50dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/ico_xcp"
+        android:src="@drawable/ico_import"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
+        android:gravity="center"
+        android:textSize="15sp"
+        android:textColor="@color/color_222222"
         android:layout_gravity="center_horizontal"
-        android:padding="15dp"
-        android:text="建议同步您的通讯录，生成您的客户管理私有控件"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:text="建议同步您的通讯录，\n 生成您的客户管理私有控件"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <Button
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="45dp"
+        android:textColor="@color/color_f6f2ed"
+        android:background="@drawable/right_bg_button"
         android:autoLink="all"
         android:id="@+id/btn_import"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_gravity="center_horizontal"
         android:text="立即导入"
-        android:layout_width="wrap_content"
+        android:textSize="16sp"
+        android:layout_width="210dp"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:textColor="@color/gray"
-        android:layout_marginTop="20dp"
+        android:textColor="@color/color_222222"
+        android:layout_marginTop="25dp"
         android:id="@+id/tv_cancel"
         android:layout_gravity="center_horizontal"
         android:padding="10dp"
         android:text="@string/import_cancel"
+        android:textSize="15sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -56,6 +51,7 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"
         android:padding="10dp"
+        android:layout_marginBottom="15dp"
         android:text="小热点为您的数据提供安全保障"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
