--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -1,15 +1,74 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.savor.resturant.fragment.ServiceFragment">
+    android:orientation="vertical"
+    android:background="@color/color_eeeeee">
+    <include
+        android:id="@+id/head_layout"
+        layout="@layout/layout_head_title"/>
+    <LinearLayout
+        android:background="#e9e5db"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_wifi_hint"
+            android:drawablePadding="7.5dp"
+            android:textSize="16sp"
+            android:textColor="#e43018"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ico_exe_hint"
+            android:text="请链接“花家怡园”的wifi后继续操作"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="#e9e5db"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
-    <TextView
-        android:layout_gravity="center"
-        android:textSize="25sp"
-        android:textColor="@color/green"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_weight="1"
+        android:id="@+id/category_list"
+        android:layout_below="@id/head_layout"
+        android:background="@color/color_eeeeee"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <RelativeLayout
+        android:visibility="gone"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ServiceFragment" />
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@color/white">
 
-</FrameLayout>
+        <TextView
+            android:padding="10dp"
+            android:id="@+id/operation_btn"
+            android:text="去设置"
+            android:textColor="@color/white"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/bg_solid_corner_red"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_toLeftOf="@id/operation_btn"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:id="@+id/connect_tip"
+            android:text="请连接包间WIFI后进行操作"
+            android:layout_centerVertical="true"
+            android:textSize="16dp"
+            android:textColor="@color/title_text_color"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+</LinearLayout>
