--- a/app/src/main/res/drawable/corner_edit_view_bg.xml
+++ b/app/src/main/res/drawable/corner_edit_view_bg.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#edebe6" />
-    <corners android:radius="6dp" /> //背景色
+    <solid android:color="#f6f2ed" />
+    <corners android:radius="2dp" /> //背景色
 
     <stroke
         android:width="1dp"
-        android:color="#e2e0db"  />
+        android:color="#b4b1ad"  />
 
     <padding
         android:bottom="1dp"
