--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,11 +9,47 @@
     <include
         layout="@layout/include_search_title"
         />
-    <android.support.v7.widget.RecyclerView
-        android:background="#F6F3EE"
-        android:id="@+id/contact_member"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center"
-         />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:background="#F6F3EE"
+            android:id="@+id/contact_member"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
+            />
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/ll_empty_hint"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:background="#EDE6DE"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:text="没搜索到该客户的信息"
+                android:textSize="15sp"
+                android:textColor="@color/color_text_black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tv_add_customer"
+                android:textColor="@color/colorPrimaryDark"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:layout_marginTop="25dp"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:layout_below="@id/tv_empyt_hint"
+                android:text="添加"
+                android:textSize="16sp"
+                android:background="@drawable/btn_add_bg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </RelativeLayout>
+
 </LinearLayout>
