--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -65,6 +65,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center"
+                android:layout_marginLeft="15dp"
                  />
             <TextView
                 android:id="@+id/tv_history_empty"
