--- a/app/src/main/res/drawable/selector_bottom_tab_text_color.xml
+++ b/app/src/main/res/drawable/selector_bottom_tab_text_color.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/colorPrimaryDark" android:state_checked="true"/>
     <item android:color="@color/colorPrimaryDark" android:state_pressed="true"/>
-    <item android:color="@color/deep_gray" android:state_checked="false"/>
-    <item android:color="@color/deep_gray" android:state_pressed="false"/>
-    <item android:color="@color/deep_gray"/>
+    <item android:color="@color/color_bottom_text" android:state_checked="false"/>
+    <item android:color="@color/color_bottom_text" android:state_pressed="false"/>
+    <item android:color="@color/color_bottom_text"/>
 </selector>
