--- a/common-library/src/main/res/layout/tab_item.xml
+++ b/common-library/src/main/res/layout/tab_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@color/white"
+    android:background="@color/color_bottom_bg"
     android:gravity="center">
 
     <CheckedTextView
